# MZPico-800-Manager

./: .gitignore  CMakeLists.txt  LICENSE  console.c  console.h  explorer.c  explorer.h  manager.c  menu.c  mz-comm.c  mz-comm.h  setup.c
.github/workflows/: build.yml  tag_release.yml
